--- a/dd-java-agent/instrumentation/jetty-8/jetty-8.gradle
+++ b/dd-java-agent/instrumentation/jetty-8/jetty-8.gradle
@@ -35,7 +35,8 @@ dependencies {
   testCompile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '8.0.0.v20110901'
   testCompile group: 'org.eclipse.jetty', name: 'jetty-continuation', version: '8.0.0.v20110901'
 
-  latestDepTestCompile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.+'
-  latestDepTestCompile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.+'
-  latestDepTestCompile group: 'org.eclipse.jetty', name: 'jetty-continuation', version: '9.+'
+  // Need to determine why 9.4.21.v20190926 is causing 500 errors in tests.
+  latestDepTestCompile group: 'org.eclipse.jetty', name: 'jetty-server', version: '9.4.20.+'
+  latestDepTestCompile group: 'org.eclipse.jetty', name: 'jetty-servlet', version: '9.4.20.+'
+  latestDepTestCompile group: 'org.eclipse.jetty', name: 'jetty-continuation', version: '9.4.20.+'
 }
