--- a/settings.gradle
+++ b/settings.gradle
@@ -68,6 +68,7 @@ include ':dd-java-agent:instrumentation:jms'
 include ':dd-java-agent:instrumentation:jsp-2.3'
 include ':dd-java-agent:instrumentation:kafka-clients-0.11'
 include ':dd-java-agent:instrumentation:kafka-streams-0.11'
+include ':dd-java-agent:instrumentation:khttp'
 include ':dd-java-agent:instrumentation:lettuce-5'
 include ':dd-java-agent:instrumentation:mongo-3.1'
 include ':dd-java-agent:instrumentation:mongo-async-3.3'
