--- a/dd-java-agent/instrumentation/vertx/kotlin-testing/kotlin-testing.gradle
+++ b/dd-java-agent/instrumentation/vertx/kotlin-testing/kotlin-testing.gradle
@@ -5,6 +5,7 @@ ext {
 
 apply from: "${rootDir}/gradle/java.gradle"
 apply from: "${rootDir}/gradle/test-with-kotlin.gradle"
+apply plugin: 'org.unbroken-dome.test-sets'
 
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
@@ -12,9 +13,26 @@ targetCompatibility = 1.8
 compileKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
 compileTestKotlin {
     kotlinOptions.jvmTarget = "1.8"
 }
+
+testSets {
+  latestDepTest {
+    dirName = 'test'
+  }
+}
+
+compileLatestDepTestKotlin {
+  kotlinOptions.jvmTarget = "1.8"
+}
+
+compileLatestDepTestGroovy {
+  classpath = classpath.plus(files(compileTestKotlin.destinationDir))
+  dependsOn compileTestKotlin
+}
+
 dependencies {
   testCompile project(':dd-trace-api')
   testCompile project(':dd-trace-ot')
@@ -27,4 +45,7 @@ dependencies {
   testCompile project(':dd-java-agent:instrumentation:trace-annotation')
   testCompile group: 'io.vertx', name: 'vertx-core', version: '3.5.0'
   testCompile group: 'io.vertx', name: 'vertx-web', version: '3.5.0'
+
+  latestDepTestCompile group: 'io.vertx', name: 'vertx-web', version: '3.+'
 }
+
