--- a/dd-java-agent/dd-java-agent.gradle
+++ b/dd-java-agent/dd-java-agent.gradle
@@ -6,7 +6,7 @@ plugins {
 description = 'dd-java-agent'
 
 apply from: "${rootDir}/gradle/java.gradle"
-apply from: "${rootDir}/gradle/publish.gradle"
+apply from: "${rootDir}/gradle/publish-shadow.gradle"
 
 configurations {
   shadowInclude
@@ -75,7 +75,7 @@ jar {
 shadowJar {
   configurations = [project.configurations.shadowInclude]
 
-  classifier null
+  classifier 'unbundled'
   archiveName "signalfx-tracing.jar"
 
   mergeServiceFiles()
