--- a/dd-java-agent/instrumentation/trace-annotation/trace-annotation.gradle
+++ b/dd-java-agent/instrumentation/trace-annotation/trace-annotation.gradle
@@ -13,7 +13,7 @@ testSets {
 }
 
 tasks.getByName('propertyTest').configure {
-  jvmArgs "-Dsignalfx.trace.annotated.method.blacklist=something.That[doesnt,exist];dd.test.trace.annotation.SayTracedHello[doesntExist,sayHA,sayHELLOsayHAWithResource,alsoDoesntExist];"
+  jvmArgs '-Dsignalfx.trace.annotated.method.blacklist=something.That[doesnt,exist];dd.test.trace.annotation.SayTracedHello[doesntExist,sayHA,sayHELLOsayHAWithResource,alsoDoesntExist];dd.test.trace.annotation.SayTracedHello$SomeInnerClass[*];'
 }
 
 test.dependsOn(propertyTest)
