Revert "Disable muzzle check for jersey-client and jersey-server"
This reverts commit fe577212874f08e132b5429714f03d1730d243c6.

--- a/dd-java-agent/instrumentation/jax-rs-client-2.0/connection-error-handling-jersey/connection-error-handling-jersey.gradle
+++ b/dd-java-agent/instrumentation/jax-rs-client-2.0/connection-error-handling-jersey/connection-error-handling-jersey.gradle
@@ -1,5 +1,9 @@
-// Modified by SignalFx
 muzzle {
+  pass {
+    group = "org.glassfish.jersey.core"
+    module = "jersey-client"
+    versions = "[2.0,)"
+  }
 }
 
 apply from: "${rootDir}/gradle/java.gradle"
