--- a/dd-java-agent/instrumentation/jax-rs-client-1.1/jax-rs-client-1.1.gradle
+++ b/dd-java-agent/instrumentation/jax-rs-client-1.1/jax-rs-client-1.1.gradle
@@ -1,5 +1,9 @@
-// Modified by SignalFx
 muzzle {
+  pass {
+    group = "com.sun.jersey"
+    module = "jersey-client"
+    versions = "[,]"
+  }
 }
 
 apply from: "${rootDir}/gradle/java.gradle"
