--- a/dd-java-agent/instrumentation/apache-httpclient-4/apache-httpclient-4.gradle
+++ b/dd-java-agent/instrumentation/apache-httpclient-4/apache-httpclient-4.gradle
@@ -1,8 +1,10 @@
+// Modified by SignalFx
 muzzle {
   fail {
     group = "commons-httpclient"
     module = "commons-httpclient"
     versions = "[,4.0)"
+    skipVersions += '3.1-jenkins-1'
   }
   pass {
     group = "org.apache.httpcomponents"
