--- a/dd-java-agent/instrumentation/jax-rs-client-1.1/jax-rs-client-1.1.gradle
+++ b/dd-java-agent/instrumentation/jax-rs-client-1.1/jax-rs-client-1.1.gradle
@@ -1,8 +1,11 @@
+// Modified by SignalFx
 muzzle {
   pass {
     group = "com.sun.jersey"
     module = "jersey-client"
-    versions = "[,]"
+    versions = "[1.1,]"
+    skipVersions += ['1.0.3-atlassian-1-logpatch', '1.8-atlassian-6']
+    assertInverse = true
   }
 }
 
