--- a/settings.gradle
+++ b/settings.gradle
@@ -54,6 +54,7 @@ include ':dd-smoke-tests:profiling-integration-tests'
 include ':dd-java-agent:instrumentation:akka-http-10.0'
 include ':dd-java-agent:instrumentation:apache-httpasyncclient-4'
 include ':dd-java-agent:instrumentation:apache-httpclient-4'
+include ':dd-java-agent:instrumentation:apache-camel-2.20'
 include ':dd-java-agent:instrumentation:aws-java-sdk-1.11.0'
 include ':dd-java-agent:instrumentation:aws-java-sdk-2.2'
 include ':dd-java-agent:instrumentation:cdi-1.2'
