--- a/dd-java-agent/instrumentation/apache-camel-2.20/apache-camel-2.20.gradle
+++ b/dd-java-agent/instrumentation/apache-camel-2.20/apache-camel-2.20.gradle
@@ -36,9 +36,14 @@ compileJava {
 }
 
 dependencies {
+
   compileOnly group: 'org.apache.camel', name: 'camel-core', version: '2.20.0'
 
   testCompile group: 'org.spockframework', name: 'spock-spring', version: "$versions.spock"
+  
+  testCompile project(':dd-java-agent:instrumentation:commons-httpclient-2')
+  testCompile project(':dd-java-agent:instrumentation:servlet:request-2')
+  testCompile project(':dd-java-agent:instrumentation:servlet:request-3')
 
   testCompile group: 'org.springframework.boot', name: 'spring-boot-starter-test', version: '1.5.17.RELEASE'
   testCompile group: 'org.springframework.boot', name: 'spring-boot-starter', version: '1.5.17.RELEASE'
