--- a/dd-java-agent/agent-jmxfetch/agent-jmxfetch.gradle
+++ b/dd-java-agent/agent-jmxfetch/agent-jmxfetch.gradle
@@ -8,9 +8,11 @@ dependencies {
     exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
     exclude group: 'org.apache.logging.log4j', module: 'log4j-core'
     exclude group: 'org.slf4j', module: 'slf4j-api'
+    exclude group: 'org.yaml', module: 'snakeyaml'
   }
   compile deps.slf4j
   compile project(':dd-trace-api')
+  compile group: 'org.yaml', name: 'snakeyaml', version: '1.27'
 }
 
 shadowJar {
