--- a/dd-java-agent/agent-jmxfetch/agent-jmxfetch.gradle
+++ b/dd-java-agent/agent-jmxfetch/agent-jmxfetch.gradle
@@ -4,7 +4,7 @@ plugins {
 apply from: "${rootDir}/gradle/java.gradle"
 
 dependencies {
-  compile('com.datadoghq:jmxfetch:0.35.0') {
+  compile('com.datadoghq:jmxfetch:0.41.0') {
     exclude group: 'org.apache.logging.log4j', module: 'log4j-slf4j-impl'
     exclude group: 'org.apache.logging.log4j', module: 'log4j-core'
     exclude group: 'org.slf4j', module: 'slf4j-api'
@@ -12,6 +12,7 @@ dependencies {
   }
   compile deps.slf4j
   compile project(':dd-trace-api')
+  compile group: 'commons-io', name: 'commons-io', version: '2.4'
   compile group: 'org.yaml', name: 'snakeyaml', version: '1.27'
 }
 
