updates log4j to 2.17.2 and jackson-databind to 2.13.2.1

--- a/dd-java-agent/agent-profiling/profiling-uploader/profiling-uploader.gradle
+++ b/dd-java-agent/agent-profiling/profiling-uploader/profiling-uploader.gradle
@@ -1,6 +1,7 @@
 // Set properties before any plugins get loaded
 ext {
-  jmcVersion = '8.0.0-SNAPSHOT'
+//  jmcVersion = '8.0.0-SNAPSHOT'
+  jmcVersion = '8.0.1'
 }
 
 apply from: "${rootDir}/gradle/java.gradle"
