--- a/gradle/dependencies.gradle
+++ b/gradle/dependencies.gradle
@@ -11,7 +11,8 @@ ext {
     okhttp     : "3.12.8", // 3.12.x is last version to support Java7)
 
     // When upgrading for security fixes, ensure corresponding change is reflected in jmxfetch.
-    jackson    : "2.12.0", // https://nvd.nist.gov/vuln/detail/CVE-2019-16942 et al
+    jackson             : "2.13.2", 
+    jackson_databind    : "2.13.2.1", 
 
     spock      : "1.3-groovy-$spockGroovyVer",
     groovy     : groovyVer,
@@ -37,7 +38,7 @@ ext {
     // General
     slf4j          : "org.slf4j:slf4j-api:${versions.slf4j}",
     guava          : "com.google.guava:guava:$versions.guava",
-    jackson        : dependencies.create(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson),
+    jackson_databind        : dependencies.create(group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: versions.jackson_databind),
     okhttp         : dependencies.create(group: 'com.squareup.okhttp3', name: 'okhttp', version: versions.okhttp),
     bytebuddy      : dependencies.create(group: 'net.bytebuddy', name: 'byte-buddy', version: versions.bytebuddy),
     bytebuddyagent : dependencies.create(group: 'net.bytebuddy', name: 'byte-buddy-agent', version: versions.bytebuddy),
