--- a/gradle/java.gradle
+++ b/gradle/java.gradle
@@ -129,9 +129,9 @@ repositories {
   mavenLocal()
   jcenter()
   mavenCentral()
-  maven {
-    url "https://adoptopenjdk.jfrog.io/adoptopenjdk/jmc-libs-snapshots"
-  }
+//  maven {
+//    url "https://adoptopenjdk.jfrog.io/adoptopenjdk/jmc-libs-snapshots"
+//  }
   maven {
     url "https://repo.typesafe.com/typesafe/releases"
   }
